# parsing_trial

./: .gitignore  README.md  config.py  main.py  pyproject.toml  sud_dela.csv
src/: parser.py  trial_object.py  write_csv.py
