[tool.poetry]
name = "parsing-trial"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
requests = "^2.32.3"
bs4 = "^0.0.2"
lxml = "^5.2.2"
fake-useragent = "^1.5.1"
flake8 = "^7.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
